--- a/index.html
+++ b/index.html
@@ -140,8 +140,7 @@
 
 <!-- portfolio section starts  -->
 <section class="portfolio" id="portfolio">
-<h1 class="heading"> My <span>Portfolio</span> </h1>
-<h1 class="heading"> Android App & Web </h1>
+<h1 class="heading"> My Portfolio | <span>Android & Web</span></h1>
 <div class="box-container">
     <div class="box">
         <a href="https://play.google.com/store/apps/details?id=com.AsherStudio.ARSejarah" target="_blank">
